--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,11 @@ baseURL = "https://tscott0.github.io/"
 languageCode = "en-gb"
 title = "!deprecated"
 theme = "PaperMod"
+
+[params]
+  [params.homeInfoParams]
+  Content = "A blog about things that interest me"
+
+  [[params.socialIcons]]
+  name = "GitHub"
+  url = "https://github.com/tscott0/"
